--- a/tablet-style.css
+++ b/tablet-style.css
@@ -3,10 +3,7 @@
 }
 
 .image-content li {
-	float:none;
 	padding-bottom:20px;
-	display:block;
-	width:100%;
 }
 
 .special-products .product-info {
